# lambdawarden

./: CHANGELOG.md  lambdawarden.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.7/: lambdawarden-0.1.0.0-inplace.conf  package.cache
src/Domain/Core/: Request.hs
src/InterfaceAdapters/: CoreService.hs  IdentityService.hs  LambdawardenService.hs  WebVaultService.hs
src/UseCases/: Register.hs
