cabal-version:      2.4
name:               lambdawarden
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Bowen Jiang
maintainer:         jiangbowen10@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: 
        Domain.Core.Request
        UseCases.Register
        InterfaceAdapters.LambdawardenService
        InterfaceAdapters.CoreService
        InterfaceAdapters.IdentityService
        InterfaceAdapters.WebVaultService 

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.0,
        text,
        effectful-core,
        servant,
        servant-server

    hs-source-dirs:   src
    default-language: Haskell2010

executable lambdawarden
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        warp,
        lambdawarden

    hs-source-dirs:   app
    default-language: Haskell2010
